Update Vue & React ui extension examples

--- a/src/ui-extensions/react-app/public/index.html
+++ b/src/ui-extensions/react-app/public/index.html
@@ -5,6 +5,11 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <link rel="stylesheet" href="../theme.min.css" />
+
+    <!-- this one is only needed if running the React app in dev mode -->
+    <link rel="stylesheet" href="http://localhost:3000/admin/theme.min.css" />
+
     <base href="%PUBLIC_URL%/">
     <meta
       name="description"
